themes/siz/assets/css/webkid.css
body {
  background: #f5f5f5;
}

body * {
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -o-box-sizing: border-box;
}

em {
  display: block;
  padding-top: 30px;
  padding-bottom: 30px;
  line-height: 35px;
}

p {
  display: block;
  margin-top: 20px;
  margin-bottom: 20px;
  line-height: 35px;
}

strong {
  display: block;
  padding-top: 25px;
  padding-bottom: 25px;
  line-height: 35px;
  font-family: "Open Sans";
}

iframe {
  border: none;
  display: block;
  width: 100%;
  margin: 0 auto;
}

.thumbnails-b .videoCube .video-label-box .video-title, .trc_rbox_header_span {
  font-family: "Open Sans";
  font-weight: 700;
}
.branding {
  font-family: "Open Sans" !important;
}

.sidebar-container {
  width: 364.1875px;
}

.ad-below-video {
  width: 660px;
  margin: auto;
  overflow: hidden;
  margin-top: 70px;
}

.ad {
  overflow: hidden;
}

.ad.ad-banner-top {
  width: 94%;
  margin: auto;
  margin-bottom: 30px;

}

.ad.ad-banner-post {
  position: relative;
  width: 101%;
  padding-left: 30px;
  padding-bottom: 30px;
  margin: auto;
  background-color: #F5F5F5;
  margin-bottom: 30px;
}

.ad.ad-banner-bottom {
  width: 90%;
  margin-left: 4%;
  margin-top: 20px;
  margin-bottom: 0;
}

.ad.ad-banner-post-bottom {
  width: 100%;
  margin-left: 0;
  padding-left: 5%;
  margin-bottom: 0;
  background: #f5f5f5;
  padding-top: 20px;
}

.ad.ad-banner-sidebar {
  width: 310px;
  margin: auto;
  margin-bottom: 30px;
  border-bottom: 1px solid #eee;
  overflow: hidden;
}

.adsbygoogle {
  border: 1px solid #000;
}

.ad.ad-banner-bottom-sidebar, .ad.ad-banner-middle-sidebar, .ad.ad-banner-mobile-middle-sidebar {
  width: 310px;
  margin: auto;
  margin-bottom: 30px;
  overflow: hidden;
}

.ad.ad-criteo-above-video, .ad.ad-criteo-bellow-video {
  width: 104%;
  margin-top: 20px;
  margin-bottom: 20px;
}

.ad.ad-criteo-desktop-above-video {
  width: 104%;
  margin: auto;
  margin-top: 20px;
  margin-bottom: 20px;
}

.thumb-container {
  position: relative;
  overflow: hidden;
  height: 205px;
  width: 320px;
  margin-bottom: 10px;
}

.thumb {
  position: absolute;
  left: 0;
  top: 0;
  height: 200px;
  width: 340px;
}

.thumb-span {
  display: block;
}

.header {
  text-align: center;
  padding-bottom: 10px;
  background: linear-gradient(-45deg, transparent 0%, transparent 42%, rgba(0, 0, 0, 0.2) 50%, transparent 50%, transparent 100%), radial-gradient(circle, rgba(255, 0, 40, 0.9), rgba(184, 0, 65, 0.6)), linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url("/assets/img/home-bg.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center 37%;
  box-shadow: 0 1px 2px rgba(50, 50, 50, 0.2);
}

.header .app-download {
  position: absolute;
  right: 10px;
  top: 10px
}

.app-download {
  background-repeat: no-repeat;
  background-size: contain;
  background-position: center;
  display: inline-block
} 

.header .logo {
  display: inline-block;
  margin-top: 15px;
  height: 30px;
}

.fb_iframe_widget,
.fb_iframe_widget span,
.fb_iframe_widget span iframe[style] {
  min-width: 100% !important;
  width: 100% !important;
  margin-bottom: 40px;
}

.fb_iframe_widget span {
  margin-top: 40px;  
}

.fb-video {
  margin-bottom: 0;
}

div.fluid-width-video-wrapper {
  margin-bottom: 35px;
  margin-top: 10px;
}


img {
  max-width: 100%;
}

a {
  outline: none;
  margin: 0;
  padding: 0;
  font-size: 100%;
  vertical-align: baseline;
  background: transparent;
  text-decoration: none;
}

.container {
  max-width: 740px;
  margin: auto;
}

.taglist-wrapper {
  width: 100%;
  background: #FFF;
  height: 45px;
  line-height: 40px;
  padding: 0;
  border-bottom: 1px solid #E8E8E8;
}

#twitter-widget-0 {
  margin: auto !important;
}

ul.taglist {
  padding: 0 1em;
  margin: 0;
  list-style: none;
  max-width: 1250px;
  margin: 0 auto;
}

ul.taglist li {
  margin: 0;
  padding: .2em .5em;
  text-transform: uppercase;
  font-family: "Open Sans", sans-serif;
  font-weight: 500;
  color: #111;
  font-size: 14px;
  float: left;
  cursor: pointer;
  transition: none;
}
ul.taglist li:hover {
  background: #ff0002;
  font-style: italic;
  cursor: pointer;
}
ul.taglist li:hover a {
  color: #fff;
}

ul.taglist li a {
  text-decoration: none;
  transition: none;
  cursor: pointer;
}

#content {
  width: 100%;
  max-width: 1250px;
  margin: 0 auto;
  margin-top: 25px;
  padding: 1em;
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -o-box-sizing: border-box;
}

.sidebox.latest-articles a {
  text-decoration: none;
  margin-bottom: 1rem;
  padding-bottom: 1rem;
  display: block;
  font-family: "Open Sans", sans-serif;
  font-weight: bold;
  border-bottom: 1px solid #eee;
  line-height: 1.3;
}

.sidebox .loader {
  width: 100%;
  text-align: center;
  font-size: 30px;
  padding: 1em 0;
  display: none;
}

.sidebox .loading .loader {
  display: block;
  height: 3em;
  width: 3em;
  animation: rotation 1s infinite linear;
  border: 1px solid rgba(255, 0, 2, 0.2);
  border-top-color: rgba(255, 0, 2, 0.7);
  border-radius: 50%;
  margin: 20px auto;
}

@keyframes rotation {
  to {
    transform: rotate(360deg);
  }
}

.sidebox.most a.last {
  padding-bottom: 0;
  border: none;
}

.sidebox.most a .date {
  font-size: .8em;
  color: #9EABB3;
  font-weight: normal;
  margin-bottom: .6em;
}

.sidebox .sidebox-title {
  background: #505050;
  padding: .5em 1em;
  color: #fff;
  font-family: "Arial";
  font-size: 22px;
  font-weight: bold;
}

.sidebox.about .most {
  font-size: .9em;
  line-height: 1.7;
}

.sidebox .most {
  padding: 1em;
}
#articles, #article {
  width: 67%;
  margin-right: 3%;
  float: left;
}

#articles .post {
  width: 100%;
  margin: 0;
  padding: 0;
  padding-bottom: 1em;
  max-width: none;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -o-box-sizing: border-box;
  margin-bottom: 2em;
}
/* ... */

